force-app/main/default/objects/Time_Entry__c/fields/Break_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Break_Minutes__c</fullName>
    <label>Break Minutes</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>