force-app/main/default/objects/Time_Entry__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <label>Hours</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
</CustomField>